--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,16 +3,16 @@ name: Checks
 
 on: [push]
 
-jobs: 
-  test-lint: 
+jobs:
+  test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
-    steps: 
+    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
-        with: 
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
